[package]
authors = ["alex"]
edition = "2018"
readme = "README.md"
name = "rust-blink"
version = "0.0.1"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-semihosting = "0.5.6"
#panic-halt = "0.2.0"
mkl25z4 = { version = "0.0.3", features = ["rt"] }
#mkl25z4-hal = { git = "https://github.com/mgottschlag/mkl25z4-hal.git" }
#embedded-hal = "0.2.3"
heapless = "0.7.5"
nb = "0.1.1"

# [dependencies.mkl25z]
# path = "../mkl25z_pac"
# features = ["rt"]
# version = "0.0.1" 

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "rust-blink"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

#[patch."https://github.com/mgottschlag/mkl25z4-hal"]
#mkl25z4-hal = { path = "/home/alex/Documents/projects/mkl25z4-hal" }
